# trajectory_regularizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
csrc/: CMakeLists.txt
csrc/3rd/: CMakeLists.txt
csrc/core/: CMakeLists.txt  motion.cpp  motion.h  motion.tlh  motreg.cpp  motreg.h  motreg_implement.h  motreg_implement.tlh
csrc/py_binding/: CMakeLists.txt  bind.cpp
examples/: demo.json  demo.py  demo_capi.py  demo_interp.py
motreg/: __init__.py
tools/: demo.py
