set(BUILD_SHARED_LIBS ON)
set(G2O_BUILD_APPS OFF)
set(G2O_BUILD_BENCHMARKS OFF)
set(G2O_BUILD_DATA_TYPES OFF)
set(G2O_BUILD_EXAMPLES OFF)
set(G2O_BUILD_ICP_TYPES OFF)
set(G2O_BUILD_SBA_TYPES OFF)
set(G2O_BUILD_SCLAM2D_TYPES OFF)
set(G2O_BUILD_SIM3_TYPES OFF)
set(G2O_BUILD_SLAM2D_ADDON_TYPES OFF)
set(G2O_BUILD_SLAM2D_TYPES OFF)
set(G2O_BUILD_SLAM3D_ADDON_TYPES OFF)
set(G2O_BUILD_SLAM3D_TYPES OFF)
set(G2O_FAST_MATH ON)
set(G2O_NO_IMPLICIT_OWNERSHIP_OF_OBJECTS OFF)
set(G2O_USE_CHOLMOD ON)
set(G2O_USE_CSPARSE ON)
set(G2O_USE_LGPL_LIBS OFF)
set(G2O_USE_LOGGING OFF)
set(G2O_USE_OPENGL OFF)
set(G2O_USE_OPENMP OFF)
set(G2O_NO_IMPLICIT_OWNERSHIP_OF_OBJECTS ON)
set(g2o_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} CACHE STRING "" FORCE)
set(g2o_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} CACHE STRING "" FORCE)
set(BUILD_SOPHUS_TESTS OFF CACHE BOOL "" FORCE)
set(BUILD_SOPHUS_EXAMPLES OFF CACHE BOOL "" FORCE)
set(SOPHUS_USE_BASIC_LOGGING ON CACHE BOOL "" FORCE)
set(CMAKE_CXX_FLAGS "-std=c++17")
add_subdirectory(eigen)
set(EIGEN3_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/eigen CACHE STRING "" FORCE)
add_subdirectory(g2o)
add_subdirectory(sophus)
