set(BUILD_SHARED_LIBS OFF)
set(G2O_BUILD_APPS OFF)
set(G2O_BUILD_BENCHMARKS OFF)
set(G2O_BUILD_DATA_TYPES OFF)
set(G2O_BUILD_EXAMPLES OFF)
set(G2O_BUILD_ICP_TYPES OFF)
set(G2O_BUILD_SBA_TYPES OFF)
set(G2O_BUILD_SCLAM2D_TYPES OFF)
set(G2O_BUILD_SIM3_TYPES OFF)
set(G2O_BUILD_SLAM2D_ADDON_TYPES OFF)
set(G2O_BUILD_SLAM2D_TYPES OFF)
set(G2O_BUILD_SLAM3D_ADDON_TYPES OFF)
set(G2O_BUILD_SLAM3D_TYPES OFF)
set(G2O_FAST_MATH ON)
set(G2O_NO_IMPLICIT_OWNERSHIP_OF_OBJECTS OFF)
set(G2O_USE_CHOLMOD ON)
set(G2O_USE_CSPARSE OFF)
set(G2O_USE_LGPL_LIBS OFF)
set(G2O_USE_LOGGING OFF)
set(G2O_USE_OPENGL OFF)
set(G2O_USE_OPENMP OFF)
set(G2O_NO_IMPLICIT_OWNERSHIP_OF_OBJECTS ON)
set(BUILD_SOPHUS_TESTS OFF CACHE BOOL "" FORCE)
set(BUILD_SOPHUS_EXAMPLES OFF CACHE BOOL "" FORCE)
set(SOPHUS_USE_BASIC_LOGGING OFF CACHE BOOL "" FORCE)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if (MSVC)
    find_package(suitesparse CONFIG REQUIRED)
    if (TARGET SuiteSparse::cholmod)
        set(SuiteSparse_CHOLMOD_FOUND ON CACHE BOOL "" FORCE)
        add_library(SuiteSparse::CHOLMOD ALIAS SuiteSparse::cholmod)
    endif ()
endif ()

add_subdirectory(g2o)
add_subdirectory(sophus)
